--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://IIEADB.github.io/Combitrainer-web/",
+    "homepage": "https://iieadb.github.io/Combitrainer-web",
     "name": "combitrainer-web",
     "version": "0.1.0",
     "private": true,
