--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "axios": "^1.6.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-dotenv": "^0.1.3",
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.21.3",
         "react-scripts": "5.0.1",
@@ -19,8 +20,8 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "react-dotenv && react-scripts start",
+        "build": "react-dotenv && react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
@@ -46,5 +47,10 @@
     },
     "devDependencies": {
         "gh-pages": "^6.1.1"
+    },
+    "react-dotenv": {
+        "whitelist": [
+            "BASE_URL"
+        ]
     }
 }
