--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_BASE_URL = http://localhost:8000
+#REACT_APP_BASE_URL = http://localhost:8000
 
 # AWS
-#REACT_APP_BASE_URL = https://api.combitrainer.net
+REACT_APP_BASE_URL = https://api.combitrainer.net
