--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "deploy": "gh-pages -d dist --add '.well-known/**/*'"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.15.13",
         "@reduxjs/toolkit": "^2.2.1",
         "axios": "^1.6.7",
         "dotenv": "^16.4.5",
