--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.15.13",
         "@mui/material": "^5.15.13",
+        "@mui/x-date-pickers": "^6.19.7",
         "@reduxjs/toolkit": "^2.2.1",
         "axios": "^1.6.7",
+        "dayjs": "^1.11.10",
         "dotenv": "^16.4.5",
         "gh-pages": "^6.1.1",
         "react": "^18.2.0",
